--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhXf5LA1freTaH2SsBBI/H",
+      "authorship_tag": "ABX9TyO8TtypxMcBbbCZA078JRfI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1539,7 +1539,7 @@
       "source": [
         "# Contabilizo los datos nulos/faltantes por columna.\n",
         "\n",
-        "pd.DataFrame({'Cant. Nulos' : df.isna().sum(), '% Nulos' : df.isna().sum() / (df.shape[0]) * (100)}).round(2)"
+        "pd.DataFrame({'Cant.NAN' : df.isna().sum(), '%NAN' : df.isna().sum() / (df.shape[0]) * (100)}).round(2)"
       ],
       "metadata": {
         "colab": {
@@ -1547,32 +1547,32 @@
           "height": 457
         },
         "id": "Uri8fSIReBF5",
-        "outputId": "62761dfb-636d-41b9-afbb-09a56c76e7ae"
+        "outputId": "d3b0cea7-0e5a-4e92-bd5b-162e8207ae91"
       },
-      "execution_count": 37,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                      Cant. Nulos  % Nulos\n",
-              "type                            0     0.00\n",
-              "fixed acidity                  10     0.19\n",
-              "volatile acidity                8     0.15\n",
-              "citric acid                     3     0.06\n",
-              "residual sugar                  2     0.04\n",
-              "chlorides                       2     0.04\n",
-              "free sulfur dioxide             0     0.00\n",
-              "total sulfur dioxide            0     0.00\n",
-              "density                         0     0.00\n",
-              "pH                              9     0.17\n",
-              "sulphates                       4     0.08\n",
-              "alcohol                         0     0.00\n",
-              "quality                         0     0.00"
+              "                      Cant.NAN  %NAN\n",
+              "type                         0   0.0\n",
+              "fixed acidity                0   0.0\n",
+              "volatile acidity             0   0.0\n",
+              "citric acid                  0   0.0\n",
+              "residual sugar               0   0.0\n",
+              "chlorides                    0   0.0\n",
+              "free sulfur dioxide          0   0.0\n",
+              "total sulfur dioxide         0   0.0\n",
+              "density                      0   0.0\n",
+              "pH                           0   0.0\n",
+              "sulphates                    0   0.0\n",
+              "alcohol                      0   0.0\n",
+              "quality                      0   0.0"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a2f7bac5-7ddc-4646-974c-569504ca145b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9ca482f2-d962-46f9-a1f7-24583227164a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1591,75 +1591,75 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Cant. Nulos</th>\n",
-              "      <th>% Nulos</th>\n",
+              "      <th>Cant.NAN</th>\n",
+              "      <th>%NAN</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>type</th>\n",
               "      <td>0</td>\n",
-              "      <td>0.00</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>fixed acidity</th>\n",
-              "      <td>10</td>\n",
-              "      <td>0.19</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>volatile acidity</th>\n",
-              "      <td>8</td>\n",
-              "      <td>0.15</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>citric acid</th>\n",
-              "      <td>3</td>\n",
-              "      <td>0.06</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>residual sugar</th>\n",
-              "      <td>2</td>\n",
-              "      <td>0.04</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>chlorides</th>\n",
-              "      <td>2</td>\n",
-              "      <td>0.04</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>free sulfur dioxide</th>\n",
               "      <td>0</td>\n",
-              "      <td>0.00</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>total sulfur dioxide</th>\n",
               "      <td>0</td>\n",
-              "      <td>0.00</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>density</th>\n",
               "      <td>0</td>\n",
-              "      <td>0.00</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>pH</th>\n",
-              "      <td>9</td>\n",
-              "      <td>0.17</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>sulphates</th>\n",
-              "      <td>4</td>\n",
-              "      <td>0.08</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>alcohol</th>\n",
               "      <td>0</td>\n",
-              "      <td>0.00</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>quality</th>\n",
               "      <td>0</td>\n",
-              "      <td>0.00</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1667,7 +1667,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a2f7bac5-7ddc-4646-974c-569504ca145b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9ca482f2-d962-46f9-a1f7-24583227164a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1719,12 +1719,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a2f7bac5-7ddc-4646-974c-569504ca145b button.colab-df-convert');\n",
+              "        document.querySelector('#df-9ca482f2-d962-46f9-a1f7-24583227164a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a2f7bac5-7ddc-4646-974c-569504ca145b');\n",
+              "        const element = document.querySelector('#df-9ca482f2-d962-46f9-a1f7-24583227164a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1744,8 +1744,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6b33f099-3868-4ece-ab28-cd0f0eaf1eea\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6b33f099-3868-4ece-ab28-cd0f0eaf1eea')\"\n",
+              "<div id=\"df-0f95948b-5ca2-4dc8-a2b4-9660b0adbf70\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0f95948b-5ca2-4dc8-a2b4-9660b0adbf70')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1864,7 +1864,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6b33f099-3868-4ece-ab28-cd0f0eaf1eea button');\n",
+              "        document.querySelector('#df-0f95948b-5ca2-4dc8-a2b4-9660b0adbf70 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1876,11 +1876,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"pd\",\n  \"rows\": 13,\n  \"fields\": [\n    {\n      \"column\": \"Cant. Nulos\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3,\n        \"min\": 0,\n        \"max\": 10,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          0,\n          10,\n          9\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"% Nulos\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.07053822386225092,\n        \"min\": 0.0,\n        \"max\": 0.19,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          0.0,\n          0.19,\n          0.17\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"pd\",\n  \"rows\": 13,\n  \"fields\": [\n    {\n      \"column\": \"Cant.NAN\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 0,\n        \"max\": 0,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"%NAN\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.0,\n        \"min\": 0.0,\n        \"max\": 0.0,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          0.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 47
         }
       ]
     },
@@ -1927,12 +1927,12 @@
         "df.groupby(by=['type', 'quality']).mean().round(2)"
       ],
       "metadata": {
-        "id": "3SSmPIEqcFo4",
-        "outputId": "14dff692-b797-4cd9-aadc-829e2d3a5ea9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 488
-        }
+        },
+        "id": "3SSmPIEqcFo4",
+        "outputId": "14dff692-b797-4cd9-aadc-829e2d3a5ea9"
       },
       "execution_count": 38,
       "outputs": [
@@ -2458,7 +2458,8 @@
     {
       "cell_type": "code",
       "source": [
-        "valoresPromedio = df.groupby(['type', 'quality']).transform('mean')\n",
+        "valoresPromedio = df.groupby(['type', 'quality']).transform('mean').round(2)\n",
+        "#print(valoresPromedio)\n",
         "df.fillna(valoresPromedio, inplace=True)\n",
         "print(df.isna().sum())"
       ],
@@ -2467,9 +2468,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "237d748c-e9c5-49c3-e0ab-e82ff893a9f7"
+        "outputId": "4823585e-5f7e-4fba-c78d-bc0535b4ab73"
       },
-      "execution_count": 41,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
