--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8TtypxMcBbbCZA078JRfI",
+      "authorship_tag": "ABX9TyP2jV9oXVwLkvNSOAD2gLfg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1080,6 +1080,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## **Valores Duplicados**\n",
+        "\n",
+        "##### Se eliminan los registros duplicados"
+      ],
+      "metadata": {
+        "id": "N3J0mGR_LTkO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(\"Dimensiones del dataset original: \", df.shape)\n",
@@ -1113,6 +1124,15 @@
       ],
       "metadata": {
         "id": "U24VOaI1rI0E"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Cardinalidad de las variables**"
+      ],
+      "metadata": {
+        "id": "DNjk4-4mQFG4"
       }
     },
     {
@@ -1525,7 +1545,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Manejo de valores faltantes**\n",
+        "## **Valores faltantes**\n",
         "\n",
         "\n",
         "##### Contabilizo los datos nulos por columnas"
@@ -1924,6 +1944,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Calculo los valores promedio de cada variable según tipo y calificación del vino.\n",
         "df.groupby(by=['type', 'quality']).mean().round(2)"
       ],
       "metadata": {
@@ -1932,9 +1953,9 @@
           "height": 488
         },
         "id": "3SSmPIEqcFo4",
-        "outputId": "14dff692-b797-4cd9-aadc-829e2d3a5ea9"
+        "outputId": "137776fd-1c84-4386-9676-cc5339a8f713"
       },
-      "execution_count": 38,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1990,7 +2011,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cc1c51f5-42b1-465f-bf56-97d7c14ebb25\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-db6d8972-70ab-4867-9899-bdac8474218e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2229,7 +2250,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cc1c51f5-42b1-465f-bf56-97d7c14ebb25')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-db6d8972-70ab-4867-9899-bdac8474218e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2281,12 +2302,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-cc1c51f5-42b1-465f-bf56-97d7c14ebb25 button.colab-df-convert');\n",
+              "        document.querySelector('#df-db6d8972-70ab-4867-9899-bdac8474218e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-cc1c51f5-42b1-465f-bf56-97d7c14ebb25');\n",
+              "        const element = document.querySelector('#df-db6d8972-70ab-4867-9899-bdac8474218e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2306,8 +2327,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b767a982-6927-4a21-8a11-a3364bbe46f5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b767a982-6927-4a21-8a11-a3364bbe46f5')\"\n",
+              "<div id=\"df-078ad1b0-cbca-4732-8d04-a70f81ea58e7\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-078ad1b0-cbca-4732-8d04-a70f81ea58e7')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2426,7 +2447,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b767a982-6927-4a21-8a11-a3364bbe46f5 button');\n",
+              "        document.querySelector('#df-078ad1b0-cbca-4732-8d04-a70f81ea58e7 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2442,7 +2463,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 49
         }
       ]
     },
@@ -2510,7 +2531,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Se contabilizan los datos que son menores a 0 (cero) en las columnas que según el ambito de estudio no admiten valores ceros o negativos.\n",
+        "# Se contabilizan los datos que son menores o igual a 0 (cero) en las columnas que según el ambito de estudio no admiten valores ceros o negativos.\n",
         "\n",
         "valoresnulos = (df[['fixed acidity','volatile acidity','residual sugar','chlorides','free sulfur dioxide','total sulfur dioxide','density','pH','sulphates','alcohol']] <= 0).sum()\n",
         "print(valoresnulos)"
@@ -2520,9 +2541,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IjYghh0TRF7_",
-        "outputId": "e549c496-b411-4b35-dd75-5c227df843ab"
+        "outputId": "ba1f5eae-7dce-40df-c0e0-da00662d55e2"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -2564,7 +2585,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Calculo el coeficiente de variación (CV) a fin de determinar la dispersión de los conjunto de datos respecto a la media.\n",
+        "# Calculo el coeficiente de variación (CV) a fin de determinar la dispersión de los conjuntos de datos respecto a la media.\n",
         "# Si el CV es <= 30% se dice que los datos son relativamente homogéneos.\n",
         "\n",
         "encabezados = df.columns.values[1:]\n",
